--- a/theme/assets/css/main.css
+++ b/theme/assets/css/main.css
@@ -34,7 +34,7 @@ body {
 /* This line sets the default font for most text, including the body text, navigation, and the smaller headers (h4-h6) */
 /* This line sets the font for larger headers (h1-h3), including the site title*/
 :root {
-  font-size: 110%;
+  font-size: 100%;
   font-family: "IBM Plex Sans", sans-serif;
 }
 
@@ -144,12 +144,12 @@ body {
 .main-nav-container {
   width: clamp(250px, 30%, 500px);
   position: fixed;
-  background-color: #c0c0c0;
+  background-color: #803838;
   height: 100%;
   padding: 1rem;
   z-index: 10;
   transition: all 0.5s;
-  color: black;
+  color: rgb(231, 231, 231);
 }
 
 .site-masthead {
@@ -158,7 +158,7 @@ body {
   padding-bottom: 1rem;
 }
 .site-masthead a {
-  color: black;
+  color: rgb(231, 231, 231);
   text-decoration: none;
 }
 .site-masthead h3 {
@@ -171,7 +171,7 @@ body {
 }
 
 .sidebar-rule {
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid rgb(156, 112, 112);
 }
 
 .btn-toggle-menu {
@@ -179,7 +179,7 @@ body {
 }
 
 .active {
-  background-color: white;
+  background-color: rgb(119, 23, 23);
   transition: background-color 0.2s;
 }
 
@@ -201,7 +201,7 @@ body {
   padding-inline-start: 0;
 }
 .sidebar-nav-link-section * {
-  color: black;
+  color: rgb(231, 231, 231);
   text-decoration: none;
 }
 .sidebar-nav-link-section a {
@@ -210,7 +210,7 @@ body {
   transition: background-color 0.2s;
 }
 .sidebar-nav-link-section a:hover {
-  background-color: white;
+  background-color: rgb(119, 23, 23);
 }
 
 main {
@@ -279,7 +279,7 @@ pre {
   font-size: 1.25rem;
 }
 .portfolio-card-tile:hover, .portfolio-card-tile:focus, .portfolio-card-tile:active {
-  background-color: lightgreen;
+  background-color: rgb(211, 127, 116);
 }
 
 p.portfolio-card-desc-short {
@@ -479,7 +479,7 @@ html {
   }
   .main-nav {
     transform: none;
-    background-color: #c0c0c0;
+    background-color: #803838;
     opacity: 1;
     width: 100vw;
     transition: all 0.3s;
@@ -525,10 +525,10 @@ html {
   .btn-toggle-menu svg {
     height: 100%;
     width: 100%;
-    fill: black;
+    fill: rgb(231, 231, 231);
   }
   .btn-toggle-menu:hover {
-    background-color: white;
+    background-color: rgb(119, 23, 23);
   }
   .site-masthead {
     z-index: 10;
@@ -540,7 +540,7 @@ html {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #c0c0c0;
+    background-color: #803838;
   }
   .site-masthead h3 {
     margin: 0;
@@ -595,7 +595,7 @@ pre {
 }
 .component-inline-nav .sibling-navigation a:hover,
 .component-inline-nav .sibling-navigation a:focus {
-  background-color: lightpink;
+  background-color: rgba(218, 26, 54, 0.37);
 }
 .component-inline-nav .sibling-navigation > :first-child {
   text-align: left;
